# driftEngin

./: .gitignore  a.out  chronotest.cpp  init.cpp  init.h  main.cpp  out1  perlin.cpp  perlin.h  perlintester.cpp  phyx.cpp  phyx.h  player.cpp  player.h  readme.txt
ENG/: eng.h  init.cpp
ENG/camera/: cam3rd.cpp  camOrt.cpp  camOrt.h  camera.cpp  camera.h  freecam.cpp  freecam.h
ENG/includes/glad/: glad.c  glad.h
ENG/includes/glm/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ENG/includes/imgui/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
ENG/mesh/: cube.cpp  cube.h  mesh.cpp  mesh.h  sphere.cpp  sphere.h
ENG/model/: model.cpp  model.h
ENG/objects/: ctrl.cpp  ctrl.h  game.cpp  game.h  gameobj.cpp  gameobj.h  kldr.cpp  kldr.h  perlin.cpp  perlin.h  phyx.cpp  phyx.h  rndr.cpp  rndr.h  score.h  sound.cpp  sound.h
ENG/shaders/: shader.cpp  shader.h
ENG/shaders/vertex/: lightSourceShader.vs  skyboxShader.vs
SDLtest/01_hello_SDL/: 01_hello_SDL.cpp  a.out
SolarSystem/: main.cpp
actors/: player.cpp  player.h
actors/camera/: camOrt.cpp  camOrt.h  camera.cpp  camera.h  freecam.cpp
camera/: cam3rd.h  camOrt.cpp  camOrt.h  camera.cpp  camera.h  freecam.cpp  freecam.h
cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
drift/: asteroid.cpp  asteroid.h  drift.h  main.cpp  player.cpp  player.h  simplebody.h
gameobjects/: gameObj.cpp  gameObj.h  player.cpp  player.h
imgui/: imgui_impl_opengl3.h  main.cpp
includes/glad/: glad.c
mesh/: cube.cpp  cube.h  mesh.cpp  mesh.h  model.cpp  model.h  plane.h  sphere.cpp  sphere.h
meshes/: cube.cpp  cube.h  mesh.cpp  mesh.h  plane.cpp  sphere.cpp  sphere.h
meshtest/: cube.cpp  cube.h  mesh.cpp  mesh.h  model.cpp  model.h  sphere.cpp  sphere.h
minerGame/: CMakeLists.txt  asteroid.cpp  asteroid.h  main.cpp  player.cpp  player.h
model/: model.cpp  model.h
objects/: collisionObj.cpp  collisionObj.h  ctrl.cpp  ctrl.h  game.cpp  game.h  gameObj.cpp  gameObj.h  inputObj.cpp  inputObj.h  kldr.cpp  kldr.h  phyx.cpp  phyx.h  phyxObj.cpp  phyxObj.h  renderObj.cpp  renderObj.h  rndr.cpp  rndr.h
orbitSandBox/: CMakeLists.txt  main.cpp
orbitgame/: CelestialBody.h  main.cpp
shaders/: lightSourceShader.fs  materialShader.vs  shader.cpp  shader.fs  shader.h  shader.vs  textureShader.vs
shaders/fragment/: materialShader.fs  textureShader.fs
showcase/: asteroid.cpp  asteroid.h  main.cpp  player.cpp  player.h
textures/: texture.cpp  texture.h
utilities/: phyx.cpp  phyx.h
